--- a/Syncro.Server/SyncroBackend/appsettings.json
+++ b/Syncro.Server/SyncroBackend/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtOptions": {
+    "SecretKey": "***REMOVED***",
+    "ExpiresHours": "12"
+  },
   "AllowedHosts": "*"
 }
