--- a/Syncro.Server/SyncroBackend/appsettings.json
+++ b/Syncro.Server/SyncroBackend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=SyncroDB;Username=postgres;Password=postgres"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
@@ -9,8 +9,15 @@
     }
   },
   "JwtOptions": {
-    "SecretKey": "your_super_secret_key_here_at_least_32_characters",
-    "ExpiresHours": "12"
+    "SecretKey": "",
+    "ExpiresHours": ""
+  },
+  "S3Storage": {
+    "ServiceURL": "https://s3.ru-7.storage.selcloud.ru",
+    "AccessKey": "",
+    "SecretKey": "",
+    "BucketName": "",
+    "Region": ""
   },
   "AllowedHosts": "*"
 }
