fix: удалены секреты, перенесен gitignore

--- a/Syncro.Server/Syncro.Api/appsettings.Development.json
+++ b/Syncro.Server/Syncro.Api/appsettings.Development.json
@@ -9,13 +9,13 @@
     }
   },
   "JwtOptions": {
-    "SecretKey": "***REMOVED***",
+    "SecretKey": "",
     "ExpiresHours": "12"
   },
   "S3Storage": {
     "ServiceURL": "https://s3.ru-7.storage.selcloud.ru",
-    "AccessKey": "***REMOVED***",
-    "SecretKey": "***REMOVED***",
+    "AccessKey": "",
+    "SecretKey": "",
     "BucketName": "syncro",
     "Region": "ru-7"
   },
