--- a/Syncro.Server/Syncro.Api/appsettings.json
+++ b/Syncro.Server/Syncro.Api/appsettings.json
@@ -9,16 +9,16 @@
     }
   },
   "JwtOptions": {
-    "SecretKey": "***REMOVED***",
+    "SecretKey": "",
     "ExpiresHours": "12"
   },
   "S3Storage": {
     "ServiceURL": "https://s3.ru-7.storage.selcloud.ru",
-    "AccessKey": "***REMOVED***",
-    "SecretKey": "***REMOVED***",
+    "AccessKey": "",
+    "SecretKey": "",
     "BucketName": "syncro",
     "Region": "ru-7",
-    "CdnUrl": "***REMOVED***",
+    "CdnUrl": "",
     "UrlExpirationHours": 24
   },
   "AllowedHosts": "*"
