--- a/Syncro.Server/Syncro.Api/Syncro.Api.csproj
+++ b/Syncro.Server/Syncro.Api/Syncro.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>012dc5e9-c00f-4ee5-8df2-a1ad66d941b1</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
