--- a/Syncro.Client/syncro-frontend/package.json
+++ b/Syncro.Client/syncro-frontend/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@microsoft/signalr": "^8.0.7",
     "bcryptjs": "^3.0.2",
+    "emoji-mart": "^5.6.0",
     "framer-motion": "^12.23.24",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
